--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="Navy_Blue">#05445E</color>
     <color name="Baby_Blue">#D4F1F4</color>
     <color name="salmon">#F8716B</color>
+    <color name="icon">#0D98BA</color>
 
 </resources>
