--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,9 @@
         android:layout_marginEnd="212dp"
         android:layout_marginBottom="108dp"
         android:backgroundTint="@color/Blue_Green"
-        android:text="Login" />
+        android:text="Login"
+        android:onClick="home"
+        />
 
     <Button
         android:id="@+id/button3"
