--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="430dp"
         android:layout_marginEnd="130dp"
+        android:background="@color/Navy_Blue"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -52,9 +53,9 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="175dp"
         android:background="@drawable/border"
-        android:backgroundTint="@color/salmon"
+        android:backgroundTint="@color/Navy_Blue"
         android:padding="10dp"
-        android:text="Name    "
+        android:text="Username"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -71,7 +72,7 @@
         android:layout_marginTop="323dp"
         android:layout_marginBottom="349dp"
         android:background="@drawable/border"
-        android:backgroundTint="@color/salmon"
+        android:backgroundTint="@color/Navy_Blue"
         android:padding="10dp"
         android:text="Password"
         android:textColor="@color/white"
@@ -99,6 +100,7 @@
         android:layout_height="213dp"
         android:layout_marginTop="452dp"
         android:layout_marginEnd="50dp"
+        android:alpha="0.5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/img" />
