--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -54,7 +54,7 @@
             android:textColor="@color/white"
             android:padding="10dp"/>
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/edit_username"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@drawable/border"
@@ -199,10 +199,20 @@
         android:layout_marginTop="10dp"
         >
         <Button
+            android:id="@+id/verify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/Blue_Green"
+            android:textColor="@color/Navy_Blue"
+            android:text="Verify"/>
+        <Button
             android:id="@+id/register2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:clickable="false"
             android:backgroundTint="@color/Blue_Green"
             android:textColor="@color/Navy_Blue"
             android:text="Register"/>
