--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,11 +12,11 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+           android:layout_marginTop="10dp"
             android:layout_marginLeft="140dp"
-            android:src="@drawable/user_foreground"/>
+            android:src="@drawable/img_1"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -120,6 +120,7 @@
             android:padding="10dp"/>
         <EditText
             android:id="@+id/pd"
+            android:tooltipText="The password must be atleast 8 characters long"
             android:inputType="textPassword"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -132,22 +133,24 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="30dp"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/cpassword"
-            android:layout_width="90dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/Navy_Blue"
-            android:text="Confirm - Password"
-            android:singleLine="false"
+            android:text="Confirm\n-Password"
             android:textColor="@color/white"
-            android:padding="8dp"/>
+            android:padding="10dp"
+            android:singleLine="false"/>
+
         <EditText
             android:id="@+id/cpd"
-            android:inputType="textPassword"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@drawable/border"
-            android:ems="10"/>
+            android:ems="10"
+            android:inputType="textPassword" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -166,6 +169,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:id="@+id/gender"
             android:orientation="horizontal"
             >
             <RadioButton
@@ -192,12 +196,21 @@
                 android:textColor="@color/white"/>
         </RadioGroup>
     </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:layout_marginTop="5dp"
+        android:text="*Please click verify before registering*"
+        android:gravity="center"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginTop="10dp"
+        android:orientation="horizontal"
         >
+
         <Button
             android:id="@+id/verify"
             android:layout_width="wrap_content"
@@ -212,6 +225,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"
+            android:alpha="0.4"
             android:clickable="false"
             android:backgroundTint="@color/Blue_Green"
             android:textColor="@color/Navy_Blue"
