--- a/app/src/main/res/layout/activity_start2.xml
+++ b/app/src/main/res/layout/activity_start2.xml
@@ -15,7 +15,10 @@
         app:radius="6dp"
         app:slideInterval="3000"
         app:strokeColor="#FF777777"
-        app:strokeWidth="1dp" />
+        app:strokeWidth="1dp" >
+
+
+    </com.synnapps.carouselview.CarouselView>
 
     <Button
         android:id="@+id/button2"
@@ -39,5 +42,17 @@
         android:layout_marginBottom="108dp"
         android:backgroundTint="@color/Blue_Green"
         android:text="Register" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="178dp"
+        android:backgroundTint="@color/white"
+        android:scaleType="centerCrop"
+        android:src="@drawable/img_2" />
 
 </RelativeLayout>
