--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -46,24 +46,22 @@
         android:id="@+id/textView6"
         android:layout_width="240dp"
         android:layout_height="129dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="130dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="83dp"
         android:gravity="center"
         android:text="Hello, User!"
         android:textColor="@color/white"
         android:textSize="45dp"
-        app:layout_constraintBottom_toTopOf="@+id/view"
-        app:layout_constraintEnd_toStartOf="@+id/view"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toTopOf="@+id/view2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.44" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="256dp"
-        android:layout_height="41dp"
+        android:layout_width="235dp"
+        android:layout_height="36dp"
         android:layout_marginStart="70dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="155dp"
@@ -79,8 +77,8 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="258dp"
-        android:layout_height="37dp"
+        android:layout_width="261dp"
+        android:layout_height="34dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="83dp"
@@ -89,6 +87,7 @@
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -96,27 +95,28 @@
         android:id="@+id/textView8"
         android:layout_width="136dp"
         android:layout_height="35dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="205dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="30dp"
         android:text="My Doctors"
         android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.207"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="191dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="48dp"
         android:text="Medical Records"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView7"
+        app:layout_constraintHorizontal_bias="0.186"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <ImageView
@@ -124,9 +124,10 @@
         android:layout_width="31dp"
         android:layout_height="32dp"
         android:layout_marginStart="29dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view2"
         app:srcCompat="@drawable/consult" />
@@ -135,10 +136,9 @@
         android:id="@+id/imageView5"
         android:layout_width="31dp"
         android:layout_height="32dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/textView7"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="48dp"
+        app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
         app:srcCompat="@drawable/history" />
@@ -147,26 +147,28 @@
         android:id="@+id/imageView6"
         android:layout_width="31dp"
         android:layout_height="32dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="73dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="45dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView7"
-        app:layout_constraintEnd_toStartOf="@+id/textView8"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.078"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/view2"
+        app:layout_constraintVertical_bias="0.246"
         app:srcCompat="@drawable/doctor" />
 
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="31dp"
         android:layout_height="32dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="338dp"
         android:layout_marginEnd="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/textView9"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.078"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/view2"
+        app:layout_constraintVertical_bias="0.014"
         app:srcCompat="@drawable/medicalrecords" />
 
     <Button
