--- a/app/src/main/res/layout/activity_book_appointment.xml
+++ b/app/src/main/res/layout/activity_book_appointment.xml
@@ -43,7 +43,7 @@
         app:layout_constraintBottom_toTopOf="@+id/p_age"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1" />
 
     <EditText
         android:id="@+id/p_age"
@@ -53,7 +53,7 @@
         android:layout_marginEnd="25dp"
         android:background="@drawable/border"
         android:ems="12"
-        android:inputType="textPassword"
+        android:inputType="number"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/p_name" />
@@ -72,7 +72,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/p_name"
-        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -121,7 +121,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
-        android:layout_marginEnd="50dp"
         android:orientation="horizontal"
         android:padding="5dp"
         app:layout_constraintEnd_toEndOf="parent"
