--- a/app/src/main/res/layout/activity_book_appointment.xml
+++ b/app/src/main/res/layout/activity_book_appointment.xml
@@ -23,8 +23,8 @@
         android:id="@+id/submit_appointment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="556dp"
-        android:layout_marginEnd="156dp"
+        android:layout_marginTop="620dp"
+        android:layout_marginEnd="160dp"
         android:background="@color/Navy_Blue"
         android:text="Submit"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,6 +51,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="25dp"
+        android:background="@drawable/border"
+        android:ems="12"
+        android:inputType="number"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/p_name" />
+
+    <EditText
+        android:id="@+id/p_phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="268dp"
+        android:layout_marginEnd="40dp"
         android:background="@drawable/border"
         android:ems="12"
         android:inputType="number"
@@ -95,6 +108,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.435" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="268dp"
+        android:background="@drawable/border"
+        android:backgroundTint="@color/Navy_Blue"
+        android:inputType="number"
+        android:padding="10dp"
+        android:text="Phone"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/p_phone"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.55" />
 
     <TextView
         android:id="@+id/textView10"
@@ -150,10 +183,10 @@
         android:id="@+id/textView11"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="53dp"
+        android:layout_marginTop="100dp"
+        android:gravity="center"
         android:text="Consultation : 300Rs"
         android:textSize="18sp"
-        android:gravity="center"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
