--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -64,7 +64,7 @@
         android:layout_height="129dp"
         android:layout_marginBottom="83dp"
         android:gravity="center"
-        android:text="Hello, User!"
+        android:text="Hello!"
         android:textColor="@color/white"
         android:textSize="45dp"
         app:layout_constraintBottom_toTopOf="@+id/view2"
@@ -191,8 +191,8 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:layout_marginEnd="163dp"
+        android:layout_marginStart="161dp"
+        android:layout_marginEnd="161dp"
         android:layout_marginBottom="104dp"
         android:text="Logout"
         app:layout_constraintBottom_toBottomOf="parent"
