--- a/app/src/main/res/layout/activity_doctor_home.xml
+++ b/app/src/main/res/layout/activity_doctor_home.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".doctor_home">
 
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@color/white"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="17dp"
+        android:scaleType="centerInside"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logout" />
+
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
