--- a/app/src/main/res/layout/activity_doctor_login.xml
+++ b/app/src/main/res/layout/activity_doctor_login.xml
@@ -90,5 +90,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.51" />
 
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="10dp"
+        android:background="@color/Navy_Blue"
+        android:onClick="home"
+        android:scaleType="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_home" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
